[metadata]
name = setupinit
version = file: VERSION
url = https://github.com/pyrustic/setupinit
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Properly initialize a Python project
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    init
    setup
    project-structure
    CLI
    project-manager
    pyrustic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    setupinit = setupinit.__main__:main
